--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="page-container">
         <section>
             <h2>About the Team</h2>
-            <p>The Intelligent Neuroimaging for Computational Neuroscience (INCON) group, led by Prof. Chao Li, focuses on computational methods to decode brain disease complexity.</p>
+            <p>The Intelligent Neuroimaging for Computational Neuroscience (INCON) group, led by Dr Chao Li, focuses on computational methods to decode brain disease complexity.</p>
         </section>
 
         <section>
