--- a/page_tissue/index.html
+++ b/page_tissue/index.html
@@ -131,7 +131,7 @@
                     <img src="doc/tissue/p/paper2.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
                         <span class="paper-title">Joint Modeling Histology and Molecular Markers for Cancer Classification</span>
-                        <span class="paper-journal">Medical Image Analysis (MIA 2025, IF=14.94)</span>
+                        <span class="paper-journal">Medical Image Analysis</span>
                         <span class="paper-author">Xiaofei Wang, Hanyu Liu, Yupei Zhang, Boyang Zhao, Hao Duan, Wanming Hu, Yonggao Mou, Stephen Price, Chao Li*</span>
                         <p class="paper-desc">This work jointly models histology and molecular markers for cancer classification. A multi-task learning framework is designed for cross-modal prediction. Strong performance is achieved on multiple cancer datasets.</p>
                         <div class="paper-links">
@@ -234,7 +234,7 @@
                     <img src="doc/tissue/ur/paper1.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
                         <span class="paper-title">Disentangled Multi-modal Learning of Histology and Transcriptomics for Cancer Characterization</span>
-                        <span class="paper-journal">IEEE Transactions on Medical Imaging (TMI) (IF=11.16)</span>
+                        <span class="paper-journal">IEEE Transactions on Medical Imaging</span>
                         <span class="paper-author">Yupei Zhang, Xiaofei Wang, Anran Liu, Lequan Yu, Chao Li*</span>
                         <p class="paper-desc">This work proposes a disentangled multi-modal framework that decomposes histology and transcriptomics into tumour and TME subspaces and integrates selective multi-modal fusion, gradient coordination, and subspace knowledge distillation to improve cancer diagnosis while enabling WSI-only inference.</p>
                         <div class="paper-links">
