--- a/page_demo/index.html
+++ b/page_demo/index.html
@@ -114,6 +114,7 @@
             <table class="navigation">
                 <tr>
                     <td><a href="index.html">Home</a></td>
+                    <td><a title="News" href="page_news.html">News</a></td>
                     <td><a title="MRI" href="page_mri/index.html">Neuroimaging </a></td>
                     <td><a title="Tissue" href="page_tissue/index.html">Tissue Imaging </a></td>
                     <td><a title="Gene" href="page_gene/index.html">Imaging Genetics </a></td>
