--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <table class="navigation">
                 <tr>
                     <td><a class="current" href="index.html">Home</a></td>
+                    <td><a href="page_news/index.html">News</a></td>
                     <td><a href="page_mri/index.html">Neuroimaging</a></td>
                     <td><a href="page_tissue/index.html">Tissue Imaging</a></td>
                     <td><a href="page_gene/index.html">Imaging Genetics</a></td>
